Fixed aligning on scheduling

--- a/style.css
+++ b/style.css
@@ -58,7 +58,3 @@ li.dropdown {
   text-align: center;
   font-family: "Arial Black";
 }
-
-#schedule{
-	padding-left: 25em;
-}
